unpackaged/main/default/objects/OrderApi__Catalog__c/OrderApi__Catalog__c.object-meta.xml
<CustomObject>
    <description>Primary control for the display of a group of Items in a Store</description>
    <label>Catalog</label>
    <nameField>
        <label>Catalog Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Catalogs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>