unpackaged/main/default/objects/OrderApi__Catalog__c/fields/OrderApi__Catalog__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Catalog__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Link to the parent Item Catalog record. Use Item Catalog hierarchies to better organize your products and streamline your customer&#39;s online shopping cart experience.</description>
    <inlineHelpText>Link to the parent Item Catalog record. Use Item Catalog hierarchies to better organize your products and streamline your customer&#39;s online shopping cart experience.</inlineHelpText>
    <label>Parent Catalog</label>
    <referenceTo>OrderApi__Catalog__c</referenceTo>
    <relationshipLabel>Child Catalogs</relationshipLabel>
    <relationshipName>Catalogs</relationshipName>
    <type>Lookup</type>
</CustomField>