unpackaged/main/default/objects/OrderApi__Catalog__c/fields/OrderApi__Catalog_Filters__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Catalog_Filters__c</fullName>
    <description>Lists the filters to be displayed in the left side of the page when on the current catalog. Displays as defined in the field.</description>
    <inlineHelpText>Lists the filters to be displayed in the left side of the page when on the current catalog. Displays as defined in the field.</inlineHelpText>
    <label>Catalog Filters</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>