unpackaged/main/default/objects/OrderApi__Catalog__c/fields/OrderApi__Display_Featured_Items__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Display_Featured_Items__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checking this box displays all featured items within this catalog and any child catalogs at the top of the page.</description>
    <inlineHelpText>Checking this box displays all featured items within this catalog and any child catalogs at the top of the page.</inlineHelpText>
    <label>RESERVED</label>
    <type>Checkbox</type>
</CustomField>