unpackaged/main/default/objects/OrderApi__Catalog__c/fields/OrderApi__Display_Order__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Display_Order__c</fullName>
    <description>Display order of catalogs that will be displayed on campaign pages</description>
    <inlineHelpText>Display order of catalogs that will be displayed on campaign pages</inlineHelpText>
    <label>Display Order</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>