unpackaged/main/default/objects/OrderApi__Catalog__c/fields/OrderApi__Is_Published__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Is_Published__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When checked, the Catalog will be made available for display via the API. Defaults unchecked.</description>
    <inlineHelpText>When checked, the Catalog will be made available for display via the API. Defaults unchecked.</inlineHelpText>
    <label>Is Published</label>
    <type>Checkbox</type>
</CustomField>