unpackaged/main/default/objects/OrderApi__Catalog__c/fields/OrderApi__Placeholder_Image__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Placeholder_Image__c</fullName>
    <description>Image to display if item does not have it&#39;s own image</description>
    <inlineHelpText>Image to display if item does not have it&#39;s own image</inlineHelpText>
    <label>Placeholder Image</label>
    <type>Url</type>
</CustomField>