unpackaged/main/default/objects/OrderApi__Catalog__c/fields/OrderApi__Store__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Store__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>** Required ** Link to related Store</description>
    <inlineHelpText>** Required ** Link to related Store</inlineHelpText>
    <label>Store</label>
    <referenceTo>OrderApi__Store__c</referenceTo>
    <relationshipLabel>Catalogs</relationshipLabel>
    <relationshipName>Catalogs</relationshipName>
    <type>Lookup</type>
</CustomField>