unpackaged/main/default/objects/OrderApi__Catalog__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>OrderApi__Catalog__c</columns>
    <columns>OrderApi__Store__c</columns>
    <columns>OrderApi__Is_Published__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>